Wed Aug 30 11:03:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bug fixes to the modified indexing framework mini-test

Wed Aug 30 10:37:00 BST 2000 Olly Betts

	* tests/Makefile.am: use CXXCOMPILE and LTCXXCOMPILE for compiling
	  with extra CXXFLAGS.

Tue Aug 29 19:22:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Partially implemented the new indexer interface

Fri Aug 25 16:58:39 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved stuff around for the new indexing stuff.

Fri Aug 25 12:08:00 BST 2000 Olly Betts

	* Minor tweaks to apitest and matcher.

Thu Aug 24 19:16:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More modifications to Quartz - now passes modifications made to
	  PostLists and PositionLists into an object designed to store and
	  manage them - nothing written to databases still, though.

Thu Aug 24 16:55:59 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a documentation comment, a fixme and a todo.

Thu Aug 24 15:53:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed potential core-dump bug in OmSocketLineBuf

Thu Aug 24 15:04:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various modifications to quartz database: compiles again.

Thu Aug 24 13:31:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add new, private, constructor of OmRefCntPtr, and make the pointed
	  to class a friend, so that a class can give out refcntpointers
	  to itself, even after someone else already has such a pointer.

Thu Aug 24 12:58:00 BST 2000 Olly Betts

	* Fixed two missed uses of get_irdatabase().

Thu Aug 24 11:14:55 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change OmDatabase::InternalInterface::get_irdatabase() to
	  OmDatabase::InternalInterface::get_multi_database().  Return more
	  helpful error if a multi db is asked for without specifying any
	  databases.
