@@ -1,3 +1,9 @@
+Wed Aug 30 12:34:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Now pass query length information in remote matches.
+
+	* Incremented remote protocol version.
+
 Wed Aug 30 11:03:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Bug fixes to the modified indexing framework mini-test
